RESOLVED FIXED238471
[Playstation] Fix build break after r291979 if ENABLE_SERVICE_WORKER is off
https://bugs.webkit.org/show_bug.cgi?id=238471
Summary [Playstation] Fix build break after r291979 if ENABLE_SERVICE_WORKER is off
Jigen Zhou
Reported 2022-03-28 14:47:16 PDT
After r291979, the following build errors occur when ENABLE_SERVICE_WORKER is off: In file included from WebKit/DerivedSources/unified-sources/UnifiedSource-88d1702b-4.cpp:10: C:/work/webkit/jenkins/neko/Source/WebKit\UIProcess/WebPageProxy.cpp:4915:9: error: use of undeclared identifier 'm_serviceWorkerOpenWindowCompletionCallback' if (m_serviceWorkerOpenWindowCompletionCallback) ^ C:/work/webkit/jenkins/neko/Source/WebKit\UIProcess/WebPageProxy.cpp:4916:9: error: use of undeclared identifier 'm_serviceWorkerOpenWindowCompletionCallback' m_serviceWorkerOpenWindowCompletionCallback(success); ^ 2 errors generated.
Attachments
Patch (1.48 KB, patch)
2022-03-28 15:06 PDT, Jigen Zhou
no flags
Jigen Zhou
Comment 1 2022-03-28 15:06:27 PDT
EWS
Comment 2 2022-03-29 10:32:04 PDT
Committed r292041 (248981@main): <https://commits.webkit.org/248981@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455958 [details].
Radar WebKit Bug Importer
Comment 3 2022-03-29 10:33:14 PDT
Note You need to log in before you can comment on or make changes to this bug.