[Playstation] Fix build break after r291979 if ENABLE_SERVICE_WORKER is off https://bugs.webkit.org/show_bug.cgi?id=238471

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2022-03-29
Reviewed by Don Olmstead.

Build fix for playstation platform after r291979 to support ServiceWorkerClients.openWindow.
This patch resolves compiling errors occurs in WebPageProxy::callLoadCompletionHandlersIfNecessary
if ENABLE_SERVICE_WORKER is off.

* UIProcess/WebPageProxy.cpp:


Canonical link: https://commits.webkit.org/248981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292041 268f45cc-cd09-0410-ab3c-d52691b4dbfc